--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,14 @@
     "json-server": "json-server --watch src/json-server/db.json --port 3004"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
+    "formik": "^2.4.5",
     "json-server": "^1.0.0-alpha.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.3",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "redux": "^5.0.1",
@@ -23,7 +26,8 @@
     "redux-thunk": "^3.1.0",
     "uuid": "^9.0.1",
     "web-vitals": "^3.5.2",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "yup-locale-pt": "^0.0.9"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
