--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,13 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon ./src/index.js localhost 3000"
+    "start": "nodemon ./src/app.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongoose": "^8.5.3",
     "nodemon": "^3.1.4"
