--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
     "formik": "^2.4.5",
+    "jsdoc": "^4.0.3",
     "json-server": "^1.0.0-alpha.23",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
